@@ -1,5 +1,9 @@
 2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* StackPanelTest.cs: Added Measure test.
+
+2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* StackPanelTest.cs: Added.
 
 2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>
